<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <com.thekingames.ui.FanTextView
        android:id="@+id/name"
        style="@style/medieval_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spell_name_cutting_blow" />

    <LinearLayout
        android:id="@+id/spell_card_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">


            <com.thekingames.ui.FanTextView
                android:id="@+id/call_down"
                style="@style/medieval_text_description"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="start"
                android:text="@string/call_down" />

            <com.thekingames.ui.FanTextView
                android:id="@+id/cost"
                style="@style/medieval_text_description"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="start"
                android:text="@string/cost" />

            <com.thekingames.ui.FanTextView
                android:id="@+id/desc"
                style="@style/medieval_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
