<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingStart="5dp">

    <com.thekingames.ui.FanTextView
        android:id="@+id/hero_name"
        style="@style/medieval_text"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:text="Вейд" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:paddingBottom="5dp">

        <RelativeLayout
            android:layout_width="@dimen/w_card"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical">

            <com.thekingames.ui.ProgressBar
                android:id="@+id/exp"
                android:layout_width="@dimen/w_card"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:background="@drawable/bar_exp"
                android:gravity="center_horizontal"
                android:text="125/250"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.thekingames.ui.FanTextView
                android:id="@+id/lvl"
                style="@style/medieval_text"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/fon_lvl"
                android:gravity="center"
                android:text="15" />
        </RelativeLayout>

        <com.thekingames.ui.FanTextView
            android:id="@+id/points"
            style="@style/medieval_text_header"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/fon_trans"
            android:text="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/hero_card_container"
            android:layout_width="@dimen/w_card"
            android:layout_height="@dimen/h_card" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <com.thekingames.ui.FanTextView
                style="@style/medieval_text_description"
                android:layout_height="50dp"
                android:text="Сила" />

            <com.thekingames.ui.FanTextView
                style="@style/medieval_text_description"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="Ловкость" />

            <com.thekingames.ui.FanTextView
                style="@style/medieval_text_description"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="Интелект" />

            <com.thekingames.ui.FanTextView
                style="@style/medieval_text_description"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="Выносливость" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.thekingames.ui.FanTextView
                android:id="@+id/stat_str"
                style="@style/medieval_text_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="30" />

            <com.thekingames.ui.FanTextView
                android:id="@+id/stat_agility"
                style="@style/medieval_text_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="23" />

            <com.thekingames.ui.FanTextView
                android:id="@+id/stat_mind"
                style="@style/medieval_text_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="12" />

            <com.thekingames.ui.FanTextView
                android:id="@+id/stat_e"
                style="@style/medieval_text_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="45" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stat_controller"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/fon_trans"
                android:padding="5dp"
                android:src="@drawable/icon_add" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fon_trans"
                android:padding="5dp"
                android:src="@drawable/icon_add" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fon_trans"
                android:padding="5dp"
                android:src="@drawable/icon_add" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fon_trans"
                android:padding="5dp"
                android:src="@drawable/icon_add" />
        </LinearLayout>
    </LinearLayout>

    <com.thekingames.ui.FanTextView
        style="@style/medieval_text"
        android:layout_marginTop="10dp"
        android:text="@string/spells" />

    <LinearLayout
        android:id="@+id/spells"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" />

    <com.thekingames.ui.FanTextView
        style="@style/medieval_text"
        android:layout_marginTop="10dp"
        android:text="@string/gear" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/hero_slots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/add_item"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/fon_trans"
            android:padding="5dp"
            android:src="@drawable/icon_add" />
    </LinearLayout>


    <com.thekingames.ui.FanButton
        android:id="@+id/choose_hero"
        style="@style/medieval_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/choose" />
</LinearLayout>